refactor: code cleaning 2