@@ -11,6 +11,9 @@ import com.thevoxelbox.voxelsniper.brush.IBrush;
 import com.thevoxelbox.voxelsniper.brush.SnipeBrush;
 import org.bukkit.Material;
 
+import java.lang.reflect.Constructor;
+import java.lang.reflect.InvocationTargetException;
+
 /**
  *
  * @author ervinnnc
@@ -33,7 +36,7 @@ public class SnipeTool {
         messageHelper = new VoxelMessage(snipeData);
         snipeData.setVoxelMessage(messageHelper);
 
-        IBrush newBrushInstance = instanciateBrush(currentBrush);
+        IBrush newBrushInstance = instantiateBrush(currentBrush);
         if (snipeData.owner().getPlayer().hasPermission(newBrushInstance.getPermissionNode())) {
             brushes.put(currentBrush, newBrushInstance);
             this.currentBrush = currentBrush;
@@ -74,7 +77,7 @@ public class SnipeTool {
         Preconditions.checkNotNull(brush, "Can't set brush to null.");
         IBrush brushInstance = brushes.get(brush);
         if (brushInstance == null) {
-            brushInstance = instanciateBrush(brush);
+            brushInstance = instantiateBrush(brush);
             Preconditions.checkNotNull(brushInstance, "Could not instanciate brush class.");
             if (snipeData.owner().getPlayer().hasPermission(brushInstance.getPermissionNode())) {
                 brushes.put(brush, brushInstance);
@@ -103,12 +106,10 @@ public class SnipeTool {
         return ImmutableBiMap.copyOf(actionTools);
     }
 
-    IBrush instanciateBrush(Class<? extends IBrush> brush) {
+    IBrush instantiateBrush(Class<? extends IBrush> brush) {
         try {
-            return brush.newInstance();
-        } catch (InstantiationException e) {
-            return null;
-        } catch (IllegalAccessException e) {
+            return brush.getConstructor().newInstance();
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
             return null;
         }
     }
